<resources>
    <string name="app_name">VitalWatch</string>
    <string name="welcome_text">Welcome to VitalWatch</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_button_text">Login</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="fitness_information">Fitness Information</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_weight_kg">Enter Weight (kg)</string>
    <string name="enter_height_cm">Enter Height (cm)</string>
    <string name="enable_reminders">Enable Reminders</string>
    <string name="enable_sleep_tracking">Enable Sleep Tracking</string>
    <string name="enable_alarms">Enable Alarms</string>
    <string name="welcome_message">Welcome to VitalWatch Home!</string>
    <string name="google_fit_client_id">37021169792-em2a7f67v940906cdccp055psbderkif.apps.googleusercontent.com</string>
    <string name="save">Save</string>
    <string name="heart_rate">Heart Rate:</string>
    <string name="steps">Steps:</string>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="admin_button_login">Admin Login</string>
    <string name="enter_name">Enter Name</string>"
</resources>
